modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
.issue-details-dialog {
  max-height: none;
  @toggler-width: 35px;

  .dialog-content {
    padding: 5px 0px;
    max-height: 60vh;
    overflow-y: auto;
  }

  .dialog-header {
    margin-bottom: 0px;
    position: relative;

    .title {
      display: block;
      white-space: nowrap;
      float: left;
      font-size: 24px;
      max-width: 100%;
      line-height: 30px;
      margin-top: -5px;
      .ellipsis();
    }

    .issue-details-sub-title {
      display: inline-block;
      margin: 10px 0;
      font-size: 13px;
      float: left;
      clear: both;

      .creator, .assignee {
        color: @admin-black;
        font-weight: bold;
      }

      .issue-status-selector {
        width: 80px;
        display: inline-block;
        min-width: inherit;
        margin: 0px;
        margin-right: 15px;

        vertical-align: middle;

        &.open {
          .tab-menu-button {
            background-color: @admin-green;
          }
        }
        &.closed {
          .tab-menu-button {
            background-color: @admin-font-gray2;
          }
        }

        .tab-menu-button {
          display: inline-block;
          color: white;
          font-weight: bold;

          padding: 4px 14px;

          border-radius: 4px;

          &:before {
            content: '';
          }

          .label {
            margin: 0px;
          }
        }

        .menu {
          text-align: center;
          min-width: inherit;
          width: 80px;
          li {
            padding: 1px 5px;
          }
        }
      }

      .status-info {
        vertical-align: middle;
        color: @admin-font-gray1;
      }
    }

    .sub-title {
      display: inline-block;
      margin: 10px 0 15px;
      font-size: 13px;
      float: left;
      clear: both;

      .creator, .assignee {
        color: @admin-black;
        font-weight: bold;
      }
    }

    .back-button {
      float: left;
      text-decoration: none;
      background-color: @admin-white;
      cursor: pointer;
      margin: -11px 0px 0px -13px;

      &:before {
        color: @admin-font-gray2;
        font-size: 44px !important;
      }

      &:hover {
        &:before {
          color: lighten(@admin-font-gray2, 10%);
        }
      }

      .icon-medium();
      .icon-arrow-left2();
    }

  }

  .icon-tree {
    font-size: 20px;
    line-height: 32px;

    .button(@admin-font-gray2, transparent, @admin-font-gray3, transparent, false);

    &.on {
      .button(@admin-button-blue1, transparent, @admin-button-blue1, transparent, false);

      padding: 0;
      width: @toggler-width;
    }

    padding: 0;
    width: @toggler-width;
  }

  .required {
    &:after {
      display: none;
    }
  }

  .issue-dialog-form {
    margin-bottom: 15px;
    background-color: @admin-bg-light-gray;

    input-view:not(:last-child) {
      margin-bottom: 0px;
    }

    .description-text {
      margin-top: 10px;
      font-style: italic;
      &.empty {
        display: none !important;
      }
    }

    .issue-approver-selector {
      margin-bottom: 0;

      label {
        display: none;
      }
    }

    label {
      font-size: 14px;
    }

    .rich-combobox:not(.readonly) {
      margin-top: 10px;
    }
  }

  .browse-selection-item {
    &:first-child {
      padding-top: 0px;
    }

    .remove {
      display: none;
    }
  }

  .publish-dialog-item-list {

    .browse-selection-item {

      .status {
        line-height: 32px;
      }
    }

    &.contains-toggleable {

      .browse-selection-item:not(.toggleable) {
        margin-left: @toggler-width;
      }

      .include-children-toggler {
        cursor: default;
        &:hover {
          &:before {
            color: @admin-font-gray2;
          }
          &.on {
            &:before {
              color: @admin-button-blue1;
            }
          }
        }
      }
    }
  }
  .button-container {
    width: 100%;

    .dropdown-dialog-menu {
      float: right;
    }
    .cancel-button-bottom {
      display: none;

      float: left;
      margin: 0px;
    }
    .publish-action {
      float: right;
    }

    .show-schedule-action {
      float: right;
    }

    .edit-issue {
      .button-background();
      margin-left: 0;
    }

    + .no-action-message {
      display: none;
    }
  }

  &.nested {
    .button-container .cancel-button-bottom {
      display: block;
    }
  }

  &.is-publishing {
    .issue-dialog-form,
    .edit-issue,
    .items-header,
    .dialog-buttons div.checkbox {
      display: none;
    }

    .button-container .cancel-button-bottom {
      float: none;
    }
    .title {
      padding-bottom: 10px;
    }

    .sub-title {
      display: none;
    }
  }

  &.no-action {
    .button-container {
      .show-schedule-action, .publish-action, .@{_COMMON_PREFIX}dropdown-handle {
        display: none !important;
      }
    }
    .no-action-message {
      display: block;
      width: 100%;
      text-align: center;
      position: absolute;
      margin-top: 10px;
      left: 0;
      font-size: 15px;
      pointer-events: none;
    }
  }

  &.closed .modal-dialog-footer {
    display: none;
  }

}

